v25.15 Added ModalObjectInteraction Changed CommandInteraction#getCommandData to be abstract Changed Timestamp from enum to class using enums from TimeFormat Optimized imports
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>